set java version to 17